--- a/FoodPin/Base.lproj/Main.storyboard
+++ b/FoodPin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="localizable" useAutolayout="YES" initialViewController="sNN-Yl-uU7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sNN-Yl-uU7">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -779,18 +779,62 @@
         <scene sceneID="jb2-Jp-Pxs">
             <objects>
                 <tableViewController id="DNN-Rz-nK2" customClass="FeedTableViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ylZ-6C-1na">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="ylZ-6C-1na">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="e0Z-A7-Jtj">
-                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="80" id="e0Z-A7-Jtj" customClass="FeedTableViewCell" customModule="FoodPin" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="320" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e0Z-A7-Jtj" id="tCu-O7-KvO">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DrN-Fm-wiF">
+                                            <rect key="frame" x="76" y="8" width="205" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Location" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z3G-8a-6o4">
+                                            <rect key="frame" x="76" y="31" width="205" height="18"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pla-4m-nB1">
+                                            <rect key="frame" x="8" y="8" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="2Zp-xg-7ZA"/>
+                                                <constraint firstAttribute="width" constant="60" id="CW9-iB-0SC"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABL-WY-gKA">
+                                            <rect key="frame" x="76" y="52" width="205" height="16"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="11"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Pla-4m-nB1" firstAttribute="top" secondItem="tCu-O7-KvO" secondAttribute="topMargin" constant="10" id="0G4-2D-BzI"/>
+                                        <constraint firstItem="DrN-Fm-wiF" firstAttribute="top" secondItem="tCu-O7-KvO" secondAttribute="topMargin" constant="10" id="6cB-6v-qCN"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="ABL-WY-gKA" secondAttribute="bottom" constant="10" id="Hi0-BC-sbe"/>
+                                        <constraint firstItem="Z3G-8a-6o4" firstAttribute="leading" secondItem="Pla-4m-nB1" secondAttribute="trailing" constant="10" id="SMK-a7-5qt"/>
+                                        <constraint firstItem="ABL-WY-gKA" firstAttribute="top" secondItem="Z3G-8a-6o4" secondAttribute="bottom" constant="10" id="TSL-vu-TFJ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Z3G-8a-6o4" secondAttribute="trailing" constant="10" id="Tqs-Vn-RW8"/>
+                                        <constraint firstItem="Z3G-8a-6o4" firstAttribute="top" secondItem="DrN-Fm-wiF" secondAttribute="bottom" constant="10" id="hQJ-JI-L13"/>
+                                        <constraint firstItem="Z3G-8a-6o4" firstAttribute="leading" secondItem="tCu-O7-KvO" secondAttribute="leadingMargin" constant="68" id="ht8-2C-mKd"/>
+                                        <constraint firstItem="Z3G-8a-6o4" firstAttribute="top" secondItem="DrN-Fm-wiF" secondAttribute="bottom" constant="10" id="tcU-Wa-cLu"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="locationLabel" destination="Z3G-8a-6o4" id="BRl-ny-dMw"/>
+                                    <outlet property="nameLabel" destination="DrN-Fm-wiF" id="RQR-dy-M8R"/>
+                                    <outlet property="thumbnailImageView" destination="Pla-4m-nB1" id="XCc-TC-7Ab"/>
+                                    <outlet property="typeLabel" destination="ABL-WY-gKA" id="PTT-1k-ssQ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
